# ocaml-dalek

./: .gitmodules  Cargo.toml  Makefile  dalek.opam  default.nix  flake.nix
src/: binding.ml  dune  main.ml  ocaml_dalek.opam
src/libdalek_rs/: Cargo.toml  Makefile
src/libdalek_rs/src/: batch.rs  keypair.rs  lib.rs  public_key.rs  signature.rs
