(data_only_dirs libdalek_rs)

(library
 (name dalek)
 (public_name dalek)
 (modules binding)
 (libraries alien_ffi bigstring unix threads)
 (library_flags :standard -linkall))

(rule
 (targets libdalek_rs.a dlldalek_rs.so)
 (deps (source_tree libdalek_rs))
 (action
  (bash
   "\nmake -C libdalek_rs\n
    \ncp libdalek_rs/target/release/libdalek_rs.a libdalek_rs.a\n
    \ncp libdalek_rs/target/release/libdalek_rs.so dlldalek_rs.so\n")))
