(data_only_dirs libdalek_rs)

;; Example of linking requirements for an executable using `libdalek_rs` and
;; `libalien_ffi_c_stubs`
(executable
  (public_name main)
  (modules main)
  (libraries alien_ffi bigstring unix threads ocaml_dalek)
  ;(link_deps libdalek_rs.a)
  (link_flags -linkall -thread -ccopt -pthread))

(library
 (name ocaml_dalek)
 (public_name ocaml_dalek)
 (modules binding)
 (libraries alien_ffi bigstring unix threads)
 (c_library_flags -llibdalek_rs -lalien_ffi_c)
 (library_flags :standard -linkall))

; (rule
;  (targets libdalek_rs.a dlldalek_rs.so)
;  (deps (source_tree libdalek_rs))
;  (action
;   (bash
;    "\nmake -C libdalek_rs\n
;     \ncp libdalek_rs/target/release/libdalek_rs.a libdalek_rs.a\n
;     \ncp libdalek_rs/target/release/libdalek_rs.so dlldalek_rs.so\n")))
