opam-version: "1.2"
version: "0.3"
maintainer: "et4te@0fx.io"
authors: ["ZFX"]
homepage: "https://github.com/et4te/ocaml-dalek"
bug-reports: "https://github.com/et4te/ocaml-dalek/issues"
dev-repo: "https://github.com/et4te/ocaml-dalek.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
